HLT-4757: fixed alignment +/- for desktop

--- a/src/main/webapp/bundles/health_v4/less/results/results.less
+++ b/src/main/webapp/bundles/health_v4/less/results/results.less
@@ -392,7 +392,7 @@
 
         @media (@md) {
           position: relative;
-          margin-top: 3px;
+          margin-top: 4px;
           margin-right: 5px;
         }
       }
